--- a/_sass/pages/_courseware.scss
+++ b/_sass/pages/_courseware.scss
@@ -450,7 +450,8 @@
       margin-bottom: 10px;
     }
 
-    h2 {
+    h2,
+    .discussion-module-header .hd-3 {
       font-weight: 600;
       text-transform: initial;
       font-size: 1.5em;
