--- a/_sass/pages/_forum.scss
+++ b/_sass/pages/_forum.scss
@@ -1948,26 +1948,20 @@ section.discussion::after {
 
    // TODO: Migrate to components: links_buttons.css
 
-  button.btn {
-    font: bold 1.2em/1 $gym-font-stack;
-
-    &:hover,
-    &:focus {
-      font: bold 1.2em/1 $gym-font-stack;
-    }
-  }
-
   button.btn-link:not(button.action-button),
   button.form-btn,
   form .btn-primary {
+    font: bold 1.2em/1 $gym-font-stack;
     color: $gym-white;
     background-color: $gym-blue;
     padding: 1rem 1.2rem;
+    border: 0;
     border-radius: 0.125em;
     margin: 1.2em 0;
 
     &:hover,
     &:focus {
+      font: bold 1.2em/1 $gym-font-stack;
       background-color: $gym-mid-gray !important;
     }
   }
@@ -1988,6 +1982,7 @@ section.discussion::after {
   // Details
 
   .forum-nav-thread-comments-count {
+    font-weight: bold;
     background-color: $gym-orange;
 
     &:after {
