--- a/_sass/pages/_forum.scss
+++ b/_sass/pages/_forum.scss
@@ -1955,6 +1955,7 @@ section.discussion::after {
    // TODO: Migrate to components: links_buttons.css
 
   button.btn-link:not(button.action-button):not(button.all-topics),
+  button.discussion-submit-post,
   button.form-btn,
   form .btn-primary {
     font: bold 1.2em/1 $gym-font-stack;
