--- a/_includes/partials/meta/logic-courses.html
+++ b/_includes/partials/meta/logic-courses.html
@@ -7,3 +7,4 @@ Set up meta tags for full and short courses
 {%- assign og_title = course.title -%}
 {%- assign page_title =  course.title | append: " | Gymnasium" -%}
 {%- assign og_art = course.course_ID | downcase | append: "-social.png" | prepend: "/img/social/courses/" -%}
+{%- assign data_topic = course.topic -%}
