--- a/_includes/partials/meta/logic-take5.html
+++ b/_includes/partials/meta/logic-take5.html
@@ -4,6 +4,8 @@ Set up meta tags for a Take 5 meta include
 {%- assign course = site.data.take5[id] -%}
 {%- assign og_description = course.short_description -%}
 {%- assign og_url = course.title | slugify | prepend: "/courses/take5/" -%}
-{%- assign page_title = "Take 5 | Gymnasium" -%}
+{%- assign og_title = course.title -%}
+{%- assign page_title =  course.title | append: " | Gymnasium" -%}
 {%- assign og_art = course.course_ID | downcase | append: "-og.png" | prepend: "/img/take5/og/" -%}
 {%- assign og_img_alt = course.title | prepend: "Video poster for tutorial titled " -%}
+{%- assign data_topic = course.topic -%}
