--- a/_includes/partials/meta/tags.html
+++ b/_includes/partials/meta/tags.html
@@ -4,7 +4,7 @@
 <meta property="og:type" content="website">
 <meta property="og:locale" content="en_US">
 <meta property="og:site_name" content="{{ page_title }}">
-<meta property="og:title" content="{{ og_title }}">
+<meta name="og:title" property="og:title" content="{{ og_title }}" data-topic="{{ data_topic }}" data-color="">
 <meta property="og:description" content="{{ og_description }}">
 <meta property="og:image:alt" content="{{ og_img_alt }}">
 <meta property="og:image" content="{{ og_art }}">
