--- a/_includes/take5/video.html
+++ b/_includes/take5/video.html
@@ -4,7 +4,7 @@ TODO: this include is basically the same as the one used for event-video.html. T
 
 {%- if include.video_ID -%}
     <!-- The YouTube embed: -->
-    <iframe title="{{ item.title }}" width="560" height="315" src="https://www.youtube.com/embed/{{ include.video_ID }}?feature=oembed" frameborder="0" allowfullscreen fetchpriority="high"></iframe>
+    <iframe title="{{ item.title }}" width="560" height="315" src="https://www.youtube.com/embed/{{ include.video_ID }}?feature=oembed" frameborder="0" allowfullscreen></iframe>
 {%- else -%}
     <h3><mark>No video ID provided!</mark></h3>
 {%- endif -%}
