Add back data_topic

--- a/_includes/partials/meta/logic-take5.html
+++ b/_includes/partials/meta/logic-take5.html
@@ -8,3 +8,4 @@ Set up meta tags for a Take 5 meta include
 {%- assign page_title =  course.title | append: " | Gymnasium" -%}
 {%- assign og_art = course.course_ID | downcase | append: "-og.png" | prepend: "/img/take5/og/" -%}
 {%- assign og_img_alt = course.title | prepend: "Video poster for tutorial titled " -%}
+{%- assign data_topic = course.topic -%}
