--- a/css/take5.scss
+++ b/css/take5.scss
@@ -459,6 +459,10 @@ article.take5--transcript {
     margin-top: inherit;
   }
 
+  .list-margin-half li {
+    margin-top: 0.575em;
+  }
+
   [class*="language-"] {
     white-space: pre-wrap;
   }
