Update white-panel layout
- Update layout without sidebar

--- a/_layouts/wrapper-full-white.html
+++ b/_layouts/wrapper-full-white.html
@@ -5,7 +5,7 @@
 {%- endif -%}
 
 <div class="container">
-  <div class="white-panel">
+  <div class="white-panel white-panel-space-equal-lr">
     {{ content }}
   </div><!-- .white-panel -->
 </div><!-- .container -->
