--- a/_includes/partials/meta/tags.html
+++ b/_includes/partials/meta/tags.html
@@ -15,7 +15,7 @@
 <link rel="icon" href="{{ site.url }}/favicon.ico" sizes="any">
 <link rel="icon" href="{{ site.url }}/favicon.svg" type="image/svg+xml">
 <link rel="apple-touch-icon" href="{{ site.url }}/apple-touch-icon.png">
-<link rel="manifest" href="{{ site.url }}/site.webmanifest">
+<link rel="manifest" href="{{ site.url }}/manifest.json">
 
 {% if page.robots -%}
   <meta name="robots" content="{{page.robots}}">
