Update apple touch icon
- Update filename for consistency
- Update reference

--- a/_includes/partials/meta/tags.html
+++ b/_includes/partials/meta/tags.html
@@ -14,7 +14,7 @@
 
 <link rel="icon" href="{{ site.url }}/favicon.ico" sizes="any">
 <link rel="icon" href="{{ site.url }}/favicon.svg" type="image/svg+xml">
-<link rel="apple-touch-icon" href="{{ site.url }}/apple-touch-icon.png">
+<link rel="apple-touch-icon" href="{{ site.url }}/favicon-180.png">
 <link rel="manifest" href="{{ site.url }}/manifest.json">
 
 {% if page.robots -%}
