--- a/_includes/partials/meta/tags.html
+++ b/_includes/partials/meta/tags.html
@@ -10,7 +10,7 @@
 <meta name="twitter:title" property="og:title" content="{{ og_title }}">
 <meta name="twitter:description" property="og:description" content="{{ og_description }}">
 <meta name="twitter:image" property="og:image" content="{{ og_art }}">
-<meta name="twitter:image:alt" content="{{ og_img_alt }}">
+<meta name="twitter:image:alt" property="og:image:alt" content="{{ og_img_alt }}">
 
 <link rel="icon" href="{{ site.url }}/favicon.ico" sizes="any">
 <link rel="icon" href="{{ site.url }}/favicon.svg" type="image/svg+xml">
