--- a/css/hub-pages.scss
+++ b/css/hub-pages.scss
@@ -638,6 +638,9 @@ footer.card-cta {
 
 }
 
+
+// --- design systems ---
+
 .design-systems .row-info ul {
   padding-left: 1.6rem;
   margin-top: 1.2rem;
