--- a/css/main.scss
+++ b/css/main.scss
@@ -164,39 +164,6 @@ body.view-in-course {
 //   }
 // }
 
-.wrapper-footer {
-  .container,
-  .container > div,
-  div.container,
-  div.container > div {
-    padding: 0;
-    border: 0;
-    background: transparent;
-    box-shadow: none;
-
-    /* mocking the bootstrap style rule for consistency throughout page */
-    max-width: 1180px;
-  }
-
-  footer {
-    .copyright {
-      text-align: center;
-      margin-top: 1em;
-
-      a {
-        color: $gym-orange !important;
-      }
-    }
-
-    .footer-link-list img {
-      max-width: 1.5em;
-    }
-
-    img[class="open-edx-logo"] {
-      max-width: 10.9375em;
-    }
-  }
-}
 
 /* ---
 white panel (used in multiple places)
@@ -346,62 +313,6 @@ white panel (used in multiple places)
   background-color: $gym-light-page-background;
 }
 
-div.wrapper-footer {
-  margin-top: 0;
-  background-color: $gym-black;
-  border-top: 10px solid $gym-orange;
-  color: $gym-white;
-  min-height: 170px;
-
-  footer {
-    .gymnasium-logo {
-      height: 50px;
-      margin-top: 15px;
-      margin-left: 5px;
-    }
-    .edx-logo {
-      height: 50px;
-    }
-
-    .footer-link-list {
-      margin-top: 30px;
-
-      li {
-        border-right: 1px solid $gym-dark-gray;
-        height: 100%;
-        padding-right: 8px;
-
-        a,
-        a:link {
-          color: $gym-white;
-          font-family: $gym-font-stack;
-        }
-        a:hover {
-          color: $gym-orange;
-        }
-      }
-      li:last-child {
-        border-right: 0;
-      }
-    }
-    .built-on {
-      margin-top: 30px;
-      span {
-        color: $gym-white;
-      }
-      img {
-        margin-top: -15px;
-        vertical-align: text-top;
-      }
-    }
-
-    a:hover {
-      text-decoration: none;
-      border: 0;
-    }
-  }
-}
-
 section {
   padding: 0;
 }
@@ -412,23 +323,23 @@ section {
 //   z-index: 0;
 // }
 
-.gym-top-block {
-  z-index: 1;
-  position: relative;
-}
-
-.gym-top-block {
-  .gym-nav-icon {
-    background-position: center;
-    display: inline-block;
-  }
-
-  a {
-    margin-left: 0;
-    margin-right: 0;
-    text-align: left;
-  }
-}
+// .gym-top-block {
+//   z-index: 1;
+//   position: relative;
+// }
+//
+// .gym-top-block {
+//   .gym-nav-icon {
+//     background-position: center;
+//     display: inline-block;
+//   }
+//
+//   a {
+//     margin-left: 0;
+//     margin-right: 0;
+//     text-align: left;
+//   }
+// }
 
 @import "components/links_buttons";
 
@@ -1025,17 +936,19 @@ https://github.com/gymnasium/tracker/issues/40
 }
 
 
-
 /* ---
 Footer CSS (migrated from footer.scss)
 --- */
 
-#contentinfo {
+.wrapper-footer {
+  background-color: $gym-black;
+  padding: 25px 0 30px;
+  border-top: 10px solid $gym-orange;
+  clear: both;
+
+  footer {
   font-size: 16px;
   color: $gym-white;
-  background-color: $gym-black;
-  padding: 5px 10px 30px 10px;
-  margin: 0 auto;
 
   h2 {
     font-family: $gym-font-stack;
@@ -1047,27 +960,23 @@ Footer CSS (migrated from footer.scss)
 
   .gym-brand {
     margin-bottom: 1em;
-  }
 
-  .gymnasium-logo {
-    width: 12.5em;
-    height: auto;
-    margin-top: 0;
-    margin-left: 0;
-  }
+    .gymnasium-logo {
+      width: 12.5em;
+      height: auto;
+      margin-top: 0;
+      margin-left: 0;
+    }
 
-  .gym-brand p {
-    width: 95%;
-    font-size: 1em;
-    line-height: 1.55;
-    margin-top: 1.2em;
-  }
-
-  .resources {
-    clear: left;
-
-    @include breakpoint(medium, min) {
-      clear: none;
+    p {
+      font-size: 1em;
+      line-height: 1.55;
+      margin-top: 1.2em;
+      @include breakpoint(medium, min) {
+        & {
+          max-width: 24rem;
+        }
+      }
     }
   }
 
@@ -1077,34 +986,45 @@ Footer CSS (migrated from footer.scss)
     margin-bottom: 1.2em;
   }
 
+  @include breakpoint(medium, min) {
+    .what-we-do,
+    .collections {
+      margin-left: -1.2em;
+      margin-right: -1em;
+    }
+    .resources,
+    .social {
+      margin-left: -1em;
+    }
+    .affiliated-sites {
+      margin-left: 0.6em;
+      margin-right: -1em;
+    }
+  }
+
   ul {
-    list-style-type: "";
+    list-style: none;
     padding-left: 0;
-    margin-top: 0.95em;
+    margin-top: 0.97em;
     margin-left: 0;
-  }
 
-  ul ::marker {
-    color: transparent;
-  }
+    li {
+      line-height: 1.35;
+      height: auto;
+      padding-right: 0;
+      margin-top: 0.6em;
+    }
 
-  li {
-    line-height: 1.35;
-    height: auto;
-    padding-right: 0;
-    border-right: 0;
-    margin-top: 0.6em;
-  }
+    li a {
+      color: $gym-white;
+    }
 
-  li a {
-    color: $gym-white;
-  }
-
-  a:hover,
-  a:focus,
-  a:active {
-    color: $gym-orange;
-    border-bottom: 0;
+    a:hover,
+    a:focus,
+    a:active {
+      color: $gym-orange;
+      border-bottom: 0;
+    }
   }
 
   .open-edx-logo {
@@ -1113,38 +1033,25 @@ Footer CSS (migrated from footer.scss)
 
   .copyright {
     text-align: left;
+    margin-top: 1em;
+
+    small {
+      font-size: 80%;
+    }
   }
 
-  .copyright small {
-    font-size: 80%;
+  .footer-link-list img {
+    max-width: 1.5em;
+  }
+
+  img[class="open-edx-logo"] {
+    max-width: 10.9375em;
+    object-position: -2.375em center;
+  }
+
   }
 }
 
-#social {
-  li {
-    position: relative;
-  }
-
-  a[data-title] {
-    display: inline-block;
-
-    &:hover {
-      padding-right: 6ch;
-    }
-
-    &:hover::after,
-    &:focus::after,
-    &:active::after {
-      display: inline;
-      position: absolute;
-      top: 0;
-      left: 2em;
-      content: attr(data-title);
-      color: $gym-orange;
-      line-height: 1.8;
-    }
-  }
-}
 
 // Retired course announcement(s)
 
