--- a/css/main.scss
+++ b/css/main.scss
@@ -942,113 +942,111 @@ Footer CSS (migrated from footer.scss)
 
 .wrapper-footer {
   background-color: $gym-black;
-  padding: 25px 0 30px;
+  padding: 30px 0;
   border-top: 10px solid $gym-orange;
-  clear: both;
 
   footer {
-  font-size: 16px;
-  color: $gym-white;
+    font-size: 16px;
+    color: $gym-white;
 
-  h2 {
-    font-family: $gym-font-stack;
-    font-size: 1em;
-    line-height: 1.25;
-    margin-top: 0;
-    margin-bottom: 0;
-  }
-
-  .gym-brand {
-    margin-bottom: 1em;
-
-    .gymnasium-logo {
-      width: 12.5em;
-      height: auto;
+    h2 {
+      font-family: $gym-font-stack;
+      font-size: 1em;
+      line-height: 1.25;
       margin-top: 0;
-      margin-left: 0;
+      margin-bottom: 0;
     }
 
-    p {
-      font-size: 1em;
-      line-height: 1.55;
-      margin-top: 1.2em;
-      @include breakpoint(medium, min) {
-        & {
-          max-width: 24rem;
+    .gym-brand {
+      margin-bottom: 1em;
+
+      .gymnasium-logo {
+        width: 12.5em;
+        height: auto;
+        margin-top: 0;
+        margin-left: 0;
+      }
+
+      p {
+        font-size: 1em;
+        line-height: 1.55;
+        margin-top: 1.2em;
+        @include breakpoint(medium, min) {
+          & {
+            max-width: 24rem;
+          }
         }
       }
     }
-  }
 
-  .footer-link-list {
-    padding-top: 0.625em;
-    margin-top: 0;
-    margin-bottom: 1.2em;
-  }
+    .footer-link-list {
+      padding-top: 0.625em;
+      margin-top: 0;
+      margin-bottom: 1.2em;
 
-  @include breakpoint(medium, min) {
-    .what-we-do,
-    .collections {
-      margin-left: -1.2em;
-      margin-right: -1em;
-    }
-    .resources,
-    .social {
-      margin-left: -1em;
-    }
-    .affiliated-sites {
-      margin-left: 0.6em;
-      margin-right: -1em;
-    }
-  }
-
-  ul {
-    list-style: none;
-    padding-left: 0;
-    margin-top: 0.97em;
-    margin-left: 0;
-
-    li {
-      line-height: 1.35;
-      height: auto;
-      padding-right: 0;
-      margin-top: 0.6em;
+      img {
+        max-width: 1.5em;
+      }
     }
 
-    li a {
-      color: $gym-white;
+    @include breakpoint(medium, min) {
+      .what-we-do,
+      .collections {
+        margin-left: -1.2em;
+        margin-right: -1em;
+      }
+      .resources,
+      .social {
+        margin-left: -1em;
+      }
+      .affiliated-sites {
+        margin-left: 0.6em;
+        margin-right: -1em;
+      }
     }
 
-    a:hover,
-    a:focus,
-    a:active {
-      color: $gym-orange;
-      border-bottom: 0;
+    ul {
+      list-style: none;
+      padding-left: 0;
+      margin-top: 0.975em;
+      margin-left: 0;
+
+      li {
+        font-family: $gym-font-stack;
+        font-size: 1.05em;
+        line-height: 1.35;
+        letter-spacing: 0.1116625ex; // 0.75px
+        padding-right: 0;
+        margin-top: 0.6em;
+
+        a {
+          font-family: inherit;
+          color: $gym-white;
+
+          &:hover,
+          &:focus,
+          &:active {
+            color: $gym-orange;
+            border-bottom: 0;
+          }
+        }
+      }
     }
-  }
 
-  .open-edx-logo {
-    height: auto;
-  }
-
-  .copyright {
-    text-align: left;
-    margin-top: 1em;
-
-    small {
-      font-size: 80%;
+    .open-edx-logo {
+      max-width: 10.9375em;
+      object-position: -2.375em center;
     }
-  }
 
-  .footer-link-list img {
-    max-width: 1.5em;
-  }
+    .copyright {
+      text-align: left;
+      margin-top: 1em;
 
-  img[class="open-edx-logo"] {
-    max-width: 10.9375em;
-    object-position: -2.375em center;
-  }
-
+      small {
+        font-size: 80%;
+        letter-spacing: 0.1ex;
+      }
+    }
   }
 }
 
