Update header nav style
- Update letter-spacing

--- a/_sass/components/_navigation.scss
+++ b/_sass/components/_navigation.scss
@@ -39,7 +39,7 @@
       font-family: $gym-font-stack;
       font-size: 1.2em;
       color: $gym-white;
-      letter-spacing: 1px; // Readability, thank-you!
+      letter-spacing: 0.1116625ex; // 0.75px
       padding: 1.2rem 1.5rem;
       border-top: 1px solid $gym-dark-gray;
       transition: all 250ms ease;
