Update footer layout
- Update multi-column layout
- Add layout breakpoint

--- a/_includes/partials/footer.html
+++ b/_includes/partials/footer.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="row">
         <nav aria-label="Footer Navigation">
-          <div class="col-xs-12 col-md-3">
+          <div class="col brand">
             <div class="gym-brand">
               <div role="heading">
                 <a href="/" title="Gymnasium Homepage">
@@ -13,7 +13,7 @@
               <p>Design a career you love with free online courses.</p>
             </div>
           </div>
-          <div class="col-md-2 what-we-do">
+          <div class="col what-we-do">
             <section class="footer-link-list" id="what-we-do">
               <h2>What We Do</h2>
               <ul role="list">
@@ -26,7 +26,7 @@
               </ul>
             </section>
           </div>
-          <div class="col-md-3 collections">
+          <div class="col collections">
             <section class="footer-link-list" id="collections">
               <h2>Content Collections</h2>
               <ul role="list">
@@ -39,7 +39,7 @@
               </ul>
             </section>
           </div>
-          <div class="col-md-2 resources">
+          <div class="col resources">
             <section class="footer-link-list" id="resources">
               <h2>Resources</h2>
               <ul role="list">
@@ -52,7 +52,7 @@
               </ul>
             </section>
           </div>
-          <div class="col-md-1 social">
+          <div class="col social">
             <section class="footer-link-list" id="social">
               <h2>Social</h2>
               <ul role="list">
@@ -94,7 +94,7 @@
               </ul>
             </section>
           </div>
-          <div class="col-md-2 affiliated-sites">
+          <div class="col affiliated-sites">
             <section class="footer-link-list" id="affiliated-sites">
               <h2>Affiliated Sites</h2>
               <ul role="list">
