Update footer social section
- Update multi-column spacing
- Add min-width
- Add text to social icons
- Update social icon size
- Update list line-height
- Remove data-title attribute

--- a/_includes/partials/footer.html
+++ b/_includes/partials/footer.html
@@ -57,38 +57,38 @@
               <h2>Social</h2>
               <ul role="list">
                 <li>
-                  <a data-title="Twitter" href="https://twitter.com/AquentGymnasium" target="_blank" rel="noopener">
-                    <img alt="Twitter" src="{{site.url}}/img/social/icons/png/icon-twitter-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-twitter.svg" decoding="async" fetchpriority="low" width="24" height="24">
+                  <a href="https://twitter.com/AquentGymnasium" target="_blank" rel="noopener">
+                    <img alt="Twitter icon." src="{{site.url}}/img/social/icons/png/icon-twitter-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-twitter.svg" decoding="async" fetchpriority="low" width="20" height="20"> Twitter
                   </a>
                 </li>
                 <li>
-                  <a data-title="Facebook" href="https://www.facebook.com/aquentgymnasium/" target="_blank" rel="noopener">
-                    <img alt="Facebook" src="{{site.url}}/img/social/icons/png/icon-facebook-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-facebook.svg" decoding="async" fetchpriority="low" width="24" height="24">
+                  <a href="https://www.facebook.com/aquentgymnasium/" target="_blank" rel="noopener">
+                    <img alt="Facebook icon." src="{{site.url}}/img/social/icons/png/icon-facebook-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-facebook.svg" decoding="async" fetchpriority="low" width="20" height="20"> Facebook
                   </a>
                 </li>
                 <li>
-                  <a data-title="Instagram" href="https://www.instagram.com/aquent_gymnasium/" target="_blank" rel="noopener">
-                    <img alt="Instagram" src="{{site.url}}/img/social/icons/png/icon-instagram-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-instagram.svg" decoding="async" fetchpriority="low" width="24" height="24">
+                  <a href="https://www.instagram.com/aquent_gymnasium/" target="_blank" rel="noopener">
+                    <img alt="Instagram icon." src="{{site.url}}/img/social/icons/png/icon-instagram-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-instagram.svg" decoding="async" fetchpriority="low" width="20" height="20"> Instagram
                   </a>
                 </li>
                 <li>
-                  <a data-title="YouTube" href="https://www.youtube.com/channel/UCsAAa0dL-ZJpq4gN1zEcXYw" target="_blank" rel="noopener">
-                    <img alt="YouTube" src="{{site.url}}/img/social/icons/png/icon-youtube-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-youtube.svg" decoding="async" fetchpriority="low" width="24" height="24">
+                  <a href="https://www.youtube.com/channel/UCsAAa0dL-ZJpq4gN1zEcXYw" target="_blank" rel="noopener">
+                    <img alt="YouTube icon." src="{{site.url}}/img/social/icons/png/icon-youtube-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-youtube.svg" decoding="async" fetchpriority="low" width="20" height="20"> YouTube
                   </a>
                 </li>
                 <li>
-                  <a data-title="LinkedIn" href="https://www.linkedin.com/school/gymnasium/" target="_blank" rel="noopener">
-                    <img alt="LinkedIn" src="{{site.url}}/img/social/icons/png/icon-linkedin-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-linkedin.svg" decoding="async" fetchpriority="low" width="24" height="24">
+                  <a href="https://www.linkedin.com/school/gymnasium/" target="_blank" rel="noopener">
+                    <img alt="LinkedIn icon." src="{{site.url}}/img/social/icons/png/icon-linkedin-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-linkedin.svg" decoding="async" fetchpriority="low" width="20" height="20"> LinkedIn
                   </a>
                 </li>
                 <li>
-                  <a data-title="Medium" href="https://medium.com/gymnasium" target="_blank" rel="noopener">
-                    <img alt="Medium" src="{{site.url}}/img/social/icons/png/icon-medium-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-medium.svg" decoding="async" fetchpriority="low" width="24" height="24">
+                  <a href="https://medium.com/gymnasium" target="_blank" rel="noopener">
+                    <img alt="Medium icon." src="{{site.url}}/img/social/icons/png/icon-medium-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-medium.svg" decoding="async" fetchpriority="low" width="20" height="20"> Medium
                   </a>
                 </li>
                 <li>
-                  <a data-title="GitHub" href="https://github.com/gymnasium" target="_blank" rel="noopener">
-                    <img alt="GitHub" src="{{site.url}}/img/social/icons/png/icon-github-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-github.svg" decoding="async" fetchpriority="low" width="24" height="24">
+                  <a href="https://github.com/gymnasium" target="_blank" rel="noopener">
+                    <img alt="GitHub icon." src="{{site.url}}/img/social/icons/png/icon-github-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-github.svg" decoding="async" fetchpriority="low" width="20" height="20"> GitHub
                   </a>
                 </li>
               </ul>
