--- a/css/main.scss
+++ b/css/main.scss
@@ -949,6 +949,15 @@ Footer CSS (migrated from footer.scss)
     font-size: 16px;
     color: $gym-white;
 
+    nav {
+      overflow: hidden;
+      @include breakpoint(small, max) {
+        & {
+          margin-bottom: 15px;
+        }
+      }
+    }
+
     h2 {
       font-family: $gym-font-stack;
       font-size: 1em;
@@ -985,7 +994,9 @@ Footer CSS (migrated from footer.scss)
       margin-bottom: 1.2em;
 
       img {
-        max-width: 1.5em;
+        max-width: 1.25em;
+        margin-top: -0.25em;
+        margin-right: 0.375em;
       }
     }
 
@@ -993,34 +1004,31 @@ Footer CSS (migrated from footer.scss)
       float: left;
       padding-left: 15px;
       padding-right: 15px;
-      &:not(affiliated-sites) {
-        margin-right: 15px;
-      }
+      margin-right: 14px;
     }
 
     .resources {
       max-width: 10em;
     }
 
+    .social ul {
+      min-width: 6.625em;
+    }
+
+    .affiliated-sites {
+      margin-right: -15px;
+    }
+
+    @include breakpoint(large, min) {
+      .what-we-do {
+        margin-left: -15px;
+      }
+    }
+
     @include breakpoint(large, max) {
       .brand {
         float: none;
         margin-bottom: 25px;
-      }
-    }
-
-    .social {
-      a:hover:after,
-      a:focus:after,
-      a:active:after {
-        display: inline-block;
-        content: "";
-        line-height: 0;
-        vertical-align: middle;
-        border: 0.375em dashed transparent;
-        border-left-color: $gym-orange;
-        border-right: 0 none;
-        margin-left: 0.25em;
       }
     }
 
@@ -1033,7 +1041,7 @@ Footer CSS (migrated from footer.scss)
       li {
         font-family: $gym-font-stack;
         font-size: 1.05em;
-        line-height: 1.35;
+        line-height: 1.5;
         letter-spacing: 0.1116625ex; // 0.75px
         padding-right: 0;
         margin-top: 0.6em;
