--- a/_includes/partials/footer.html
+++ b/_includes/partials/footer.html
@@ -58,37 +58,37 @@
               <ul role="list">
                 <li>
                   <a href="https://twitter.com/AquentGymnasium" target="_blank" rel="noopener">
-                    <img alt="Twitter icon." src="{{site.url}}/img/social/icons/png/icon-twitter-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-twitter.svg" decoding="async" fetchpriority="low" width="20" height="20"> Twitter
+                    <img alt="Twitter bird icon." src="{{site.url}}/img/social/icons/png/icon-twitter-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-twitter.svg" decoding="async" fetchpriority="low" width="20" height="20"> Twitter
                   </a>
                 </li>
                 <li>
                   <a href="https://www.facebook.com/aquentgymnasium/" target="_blank" rel="noopener">
-                    <img alt="Facebook icon." src="{{site.url}}/img/social/icons/png/icon-facebook-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-facebook.svg" decoding="async" fetchpriority="low" width="20" height="20"> Facebook
+                    <img alt="Facebook “f” icon." src="{{site.url}}/img/social/icons/png/icon-facebook-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-facebook.svg" decoding="async" fetchpriority="low" width="20" height="20"> Facebook
                   </a>
                 </li>
                 <li>
                   <a href="https://www.instagram.com/aquent_gymnasium/" target="_blank" rel="noopener">
-                    <img alt="Instagram icon." src="{{site.url}}/img/social/icons/png/icon-instagram-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-instagram.svg" decoding="async" fetchpriority="low" width="20" height="20"> Instagram
+                    <img alt="Instagram camera icon." src="{{site.url}}/img/social/icons/png/icon-instagram-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-instagram.svg" decoding="async" fetchpriority="low" width="20" height="20"> Instagram
                   </a>
                 </li>
                 <li>
                   <a href="https://www.youtube.com/channel/UCsAAa0dL-ZJpq4gN1zEcXYw" target="_blank" rel="noopener">
-                    <img alt="YouTube icon." src="{{site.url}}/img/social/icons/png/icon-youtube-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-youtube.svg" decoding="async" fetchpriority="low" width="20" height="20"> YouTube
+                    <img alt="YouTube play button icon." src="{{site.url}}/img/social/icons/png/icon-youtube-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-youtube.svg" decoding="async" fetchpriority="low" width="20" height="20"> YouTube
                   </a>
                 </li>
                 <li>
                   <a href="https://www.linkedin.com/school/gymnasium/" target="_blank" rel="noopener">
-                    <img alt="LinkedIn icon." src="{{site.url}}/img/social/icons/png/icon-linkedin-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-linkedin.svg" decoding="async" fetchpriority="low" width="20" height="20"> LinkedIn
+                    <img alt="LinkedIn “in” icon." src="{{site.url}}/img/social/icons/png/icon-linkedin-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-linkedin.svg" decoding="async" fetchpriority="low" width="20" height="20"> LinkedIn
                   </a>
                 </li>
                 <li>
                   <a href="https://medium.com/gymnasium" target="_blank" rel="noopener">
-                    <img alt="Medium icon." src="{{site.url}}/img/social/icons/png/icon-medium-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-medium.svg" decoding="async" fetchpriority="low" width="20" height="20"> Medium
+                    <img alt="Medium ellipsis (dot, oval, thin oval) icon." src="{{site.url}}/img/social/icons/png/icon-medium-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-medium.svg" decoding="async" fetchpriority="low" width="20" height="20"> Medium
                   </a>
                 </li>
                 <li>
                   <a href="https://github.com/gymnasium" target="_blank" rel="noopener">
-                    <img alt="GitHub icon." src="{{site.url}}/img/social/icons/png/icon-github-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-github.svg" decoding="async" fetchpriority="low" width="20" height="20"> GitHub
+                    <img alt="GitHub Octocat silhouette icon." src="{{site.url}}/img/social/icons/png/icon-github-4x.png" srcset="{{site.url}}/img/social/icons/svg/icon-github.svg" decoding="async" fetchpriority="low" width="20" height="20"> GitHub
                   </a>
                 </li>
               </ul>
