Remove unused data attr

--- a/_includes/partials/meta/tags.html
+++ b/_includes/partials/meta/tags.html
@@ -7,7 +7,7 @@
 <meta name="twitter:site" content="@AquentGymnasium">
 <meta name="twitter:creator" content="@AquentGymnasium">
 <meta name="twitter:url" property="og:url" content="{{ og_url }}">
-<meta name="twitter:title" property="og:title" content="{{ og_title }}" data-topic="{{ data_topic }}" data-color="">
+<meta name="twitter:title" property="og:title" content="{{ og_title }}">
 <meta name="twitter:description" property="og:description" content="{{ og_description }}">
 <meta name="twitter:image" property="og:image" content="{{ og_art }}">
 <meta name="twitter:image:alt" property="og:image:alt" content="{{ og_img_alt }}">
