Update featured Take 5 hero
- Update CTA button style

--- a/css/heros/hero-take5.scss
+++ b/css/heros/hero-take5.scss
@@ -136,7 +136,7 @@
 
 // !override / reset/rescale font-size adjustment
 
-.hero-promo a.gym-button-secondary {
+.hero-promo a.gym-button {
   position: relative;
   font-size: 105%;
   width: auto !important;
