--- a/_includes/heros/hero-take5-featured.html
+++ b/_includes/heros/hero-take5-featured.html
@@ -56,7 +56,7 @@
         <p class="description"><strong>Take 5 minutes to learn a practical skill for free <span class="inline-block">{{ hero_instructor }}</span>.</strong></p>
       </header>
       <div class="cta">
-        <a class="gym-button gym-button-secondary" href="{{ hero_link }}"><b>Watch and Learn</b></a>
+        <a class="gym-button" href="{{ hero_link }}"><b>Watch and Learn</b></a>
       </div>
     </div>
   </div>
