JSONP to reliably fetch jobs

--- a/_includes/modules/jobs.html
+++ b/_includes/modules/jobs.html
@@ -99,3 +99,4 @@
   </div>
 </div>
 <div id="jobs-container" class="jobs-container {{jobs_module_class}}" data-options="heading:{{opt_heading}};category:{{opt_category | downcase}};limit:{{opt_limit}};" data-endpoint="{{jobs_endpoint}}" data-fallback="{{jobs_fallback}}"></div><!-- #jobs-container.jobs-container.{{jobs_module_class}} -->
+<script async defer src="https://assets.aquent.com/apps/gym/jobs.json?limit=1500&callback=processJobs"></script>
