--- a/_includes/modules/jobs.html
+++ b/_includes/modules/jobs.html
@@ -1,4 +1,5 @@
 {%- assign jobs_endpoint = "/apps/gym/jobs.json" | prepend: site.aqassetsurl -%}
+{%- assign jobs_fallback = "/feeds/jobs.jsonp" -%}
 {%- assign utm = "utm_source=gymnasium&utm_medium=web&utm_campaign=job-module&utm_content=textlink" -%}
 
 {%- capture send_errors_to_aquent -%}Please try again later, or visit the <a href="https://aquent.com/find-work/?{{utm}}" target="_blank">Aquent jobs page</a> for the most recent jobs.{%- endcapture -%}
@@ -94,4 +95,4 @@
     <p>We were unable to retrieve jobs because of an unknown error. {{ send_errors_to_aquent }}</p>
   </div>
 </div>
-<div id="jobs-container" class="jobs-container {{jobs_module_class}}" data-options="heading:{{opt_heading}};category:{{opt_category | downcase}};limit:{{opt_limit}};" data-utm="{{utm}}" data-script="{{jobs_endpoint}}?limit=1500&callback=processJobs"></div><!-- #jobs-container.jobs-container.{{jobs_module_class}} -->
+<div id="jobs-container" class="jobs-container {{jobs_module_class}}" data-options="heading:{{opt_heading}};category:{{opt_category | downcase}};limit:{{opt_limit}};" data-utm="{{utm}}" data-script="{{jobs_endpoint}}?limit=1500&callback=processJobs" data-script-fallback="{{jobs_fallback}}"></div><!-- #jobs-container.jobs-container.{{jobs_module_class}} -->
