--- a/css/heros/hero-take5.scss
+++ b/css/heros/hero-take5.scss
@@ -91,6 +91,10 @@
   margin-bottom: 4%;
 }
 
+.hero-content-copy header {
+  max-width: 36.5em;
+}
+
 .hero-content-copy header h1 {
   font-size: 2.5em;
   line-height: 1.15;
