--- a/css/static-main-content.scss
+++ b/css/static-main-content.scss
@@ -46,7 +46,6 @@
   }
 
   #support-now {
-    margin-top: 3.5rem;
     padding-bottom: 3rem;
     border-bottom: 1px dashed $gym-gray;
     margin-bottom: 4rem;
@@ -59,6 +58,11 @@
       font-size: 1.4em;
       margin-top: 2rem;
     }
+  }
+
+  .hero-text + #support-now,
+  .hero-text + #causes-we-care-about {
+    margin-top: 3.5rem;
   }
 
   #causes-we-care-about {
