--- a/_layouts/take5-raw.html
+++ b/_layouts/take5-raw.html
@@ -7,6 +7,26 @@
 <link rel="stylesheet" href="{{ site.url }}/css/take5.css?{{ site.time | date:'%s' }}" fetchpriority="high">
 
 {% assign course = site.data.take5[page.course_ID] %}
+{%- assign courses = site.data.courses-page -%}
+
+<nav class="courses-format" aria-label="Courses">
+  <div class="container">
+    <ul role="list">
+      <li>
+        <a href="/courses/full">{{ courses.full_courses.format }}</a>
+      </li>
+      <li>
+        <a href="/courses/gym-shorts">{{ courses.short_courses.format }}</a>
+      </li>
+      <li>
+        <a href="/courses/take5" aria-current="page">{{ courses.tutorials.format }}</a>
+      </li>
+      <li>
+        <a href="/collections">Collections</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
 <div class="container">
   <div class="row">
