Fix broken paths

--- a/_includes/courses/featured/full-courses.html
+++ b/_includes/courses/featured/full-courses.html
@@ -8,7 +8,7 @@
             <div class="row">
               <div class="col-xs-12 col-sm-6 col-md-12">
                 <figure>
-                  <img alt="{{ site.data.courses.GYM-107.title }} cover image." src="https://thegymcms.com/{{ site.data.courses.GYM-107.poster_art }}">
+                  <img alt="{{ site.data.courses.GYM-107.title }} cover image." src="{{ site.url }}/{{ site.data.courses.GYM-107.poster_art }}">
                 </figure>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-12">
@@ -16,12 +16,12 @@
                   <header>
                     <hgroup>
                       <p class="subhead all-caps"><b>{{ site.data.courses.GYM-107.topic }}</b></p>
-                      <h2><a href="https://thegymcms.com/{{ site.data.courses.GYM-107.url }}">{{ site.data.courses.GYM-107.title }}</a></h2>
+                      <h2><a href="{{ site.gymurl }}/{{ site.data.courses.GYM-107.url }}">{{ site.data.courses.GYM-107.title }}</a></h2>
                     </hgroup>
                   </header>
                   <p>{{ site.data.courses.GYM-107.short_description }}</p>
                   <div class="cta">
-                    <a class="gym-button" href="https://thegymcms.com/{{ site.data.courses.GYM-107.url }}"><b>Learn More</b></a>
+                    <a class="gym-button" href="{{ site.gymurl }}/{{ site.data.courses.GYM-107.url }}"><b>Learn More</b></a>
                   </div>
                 </article>
               </div>
@@ -32,7 +32,7 @@
             <div class="row">
               <div class="col-xs-12 col-sm-6 col-md-12">
                 <figure>
-                  <img alt="{{ site.data.courses.GYM-104.title }} cover image." src="https://thegymcms.com/{{ site.data.courses.GYM-104.poster_art }}">
+                  <img alt="{{ site.data.courses.GYM-104.title }} cover image." src="{{ site.url }}/{{ site.data.courses.GYM-104.poster_art }}">
                 </figure>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-12">
@@ -40,12 +40,12 @@
                   <header>
                     <hgroup>
                       <p class="subhead all-caps"><b>{{ site.data.courses.GYM-104.topic }}</b></p>
-                      <h2><a href="https://thegymcms.com/{{ site.data.courses.GYM-104.url }}">{{ site.data.courses.GYM-104.title }}</a></h2>
+                      <h2><a href="{{ site.gymurl }}/{{ site.data.courses.GYM-104.url }}">{{ site.data.courses.GYM-104.title }}</a></h2>
                     </hgroup>
                   </header>
                   <p>{{ site.data.courses.GYM-104.short_description }}</p>
                   <div class="cta">
-                    <a class="gym-button" href="https://thegymcms.com/{{ site.data.courses.GYM-104.url }}"><b>Learn More</b></a>
+                    <a class="gym-button" href="{{ site.gymurl }}/{{ site.data.courses.GYM-104.url }}"><b>Learn More</b></a>
                   </div>
                 </article>
               </div>
@@ -56,7 +56,7 @@
             <div class="row">
               <div class="col-xs-12 col-sm-6 col-md-12">
                 <figure>
-                  <img alt="{{ site.data.courses.GYM-103.title }} cover image." src="https://thegymcms.com/{{ site.data.courses.GYM-103.poster_art }}">
+                  <img alt="{{ site.data.courses.GYM-103.title }} cover image." src="{{ site.url }}/{{ site.data.courses.GYM-103.poster_art }}">
                 </figure>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-12">
@@ -64,12 +64,12 @@
                   <header>
                     <hgroup>
                       <p class="subhead all-caps"><b>{{ site.data.courses.GYM-103.topic }}</b></p>
-                      <h2><a href="https://thegymcms.com/{{ site.data.courses.GYM-103.url }}">{{ site.data.courses.GYM-103.title }}</a></h2>
+                      <h2><a href="{{ site.gymurl }}/{{ site.data.courses.GYM-103.url }}">{{ site.data.courses.GYM-103.title }}</a></h2>
                     </hgroup>
                   </header>
                   <p>{{ site.data.courses.GYM-103.short_description }}</p>
                   <div class="cta">
-                    <a class="gym-button" href="https://thegymcms.com/{{ site.data.courses.GYM-103.url }}"><b>Learn More</b></a>
+                    <a class="gym-button" href="{{ site.gymurl }}/{{ site.data.courses.GYM-103.url }}"><b>Learn More</b></a>
                   </div>
                 </article>
               </div>
