--- a/_includes/courses/featured/gym-shorts.html
+++ b/_includes/courses/featured/gym-shorts.html
@@ -8,7 +8,7 @@
             <div class="row">
               <div class="col-xs-12 col-sm-6 col-md-12">
                 <figure>
-                  <img alt="{{ site.data.courses.GYM-018.title }} cover image." src="{{ site.url }}/{{ site.data.courses.GYM-018.poster_art }}">
+                  <img alt="{{ site.data.courses.GYM-018.title }} cover image." src="{{ site.url }}/{{ site.data.courses.GYM-018.poster_art }}" decoding="async" fetchpriority="high">
                 </figure>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-12">
@@ -32,7 +32,7 @@
             <div class="row">
               <div class="col-xs-12 col-sm-6 col-md-12">
                 <figure>
-                  <img alt="{{ site.data.courses.GYM-016.title }} cover image." src="{{ site.url }}/{{ site.data.courses.GYM-016.poster_art }}">
+                  <img alt="{{ site.data.courses.GYM-016.title }} cover image." src="{{ site.url }}/{{ site.data.courses.GYM-016.poster_art }}" decoding="async" fetchpriority="high">
                 </figure>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-12">
@@ -56,7 +56,7 @@
             <div class="row">
               <div class="col-xs-12 col-sm-6 col-md-12">
                 <figure>
-                  <img alt="{{ site.data.courses.GYM-015.title }} cover image." src="{{ site.url }}/{{ site.data.courses.GYM-015.poster_art }}">
+                  <img alt="{{ site.data.courses.GYM-015.title }} cover image." src="{{ site.url }}/{{ site.data.courses.GYM-015.poster_art }}" decoding="async" fetchpriority="high">
                 </figure>
               </div>
               <div class="col-xs-12 col-sm-6 col-md-12">
