--- a/css/take5.scss
+++ b/css/take5.scss
@@ -88,14 +88,20 @@
   padding-bottom: 0;
 }
 
-
-#main h1 {
-  font-size: 2.25em;
-}
-
 #about p {
   font: normal 1.25em/1.45 $gym-text-font-stack;
   margin-top: .6em;
+
+  @include breakpoint(small, max) {
+    span.block {
+      display: inline;
+    }
+  }
+
+}
+
+#main h1 {
+  font-size: 2.25em;
 }
 
 main h3 {
