Update gym-button specificity
- Update natural mulit-class specificity

--- a/_sass/components/_links_buttons.scss
+++ b/_sass/components/_links_buttons.scss
@@ -179,7 +179,8 @@ div.problem .action .save:not(:disabled) {
   vertical-align: text-top;
 }
 
-.gym-button.natural {
+.gym-button.natural,
+a.gym-button.natural {
   width: auto;
 }
 
